--- a/templates/01_system_fabric.j2
+++ b/templates/01_system_fabric.j2
@@ -9,12 +9,12 @@
 
 # {{ ansible_managed }}
 {% set fabric = spreadsheet_system_fabric %}
-{% macro uplnkvds(arg1,arg2='') %}
-{% if 'Uplink ' in "i.UPLINK{{arg1}}" %}{{arg2}} "i.UPLINK{{arg1}}"{%endif%}
+{# {% macro uplnkvds(arg1,arg2='') %}
+{% for k,v in i.items() if "Uplink " in k %}{{arg2}} "i.UPLINK{{arg1}}"{%endfor%}
 {% endmacro           %}
 {% macro uplnknvds(arg1,arg2='') %}
-{% if 'vmnic' in "i.UPLINK{{arg1}}" %}{{arg2}} "i.UPLINK{{arg1}}"{%endif%}
-{% endmacro           %}
+{% if "vmnic" in "i.UPLINK{{arg1}}" %}{{arg2}} "i.UPLINK{{arg1}}"{%endif%}
+{% endmacro           %} #}
 ---
 
 system_fabric:
@@ -33,7 +33,7 @@ system_fabric:
 
   compute_transp_nodes:
 {% for i in fabric if ((i.Node_type == 'vsphere_cluster' or i.Node_type == 'single_esxi_host') and i.vcenter_ip and i.Uplink_profile) %}
-    - { vcenter: "vCenter_{{i.vcenter_ip}}"{%if i.Node_name and (i.Node_type|lower == 'vsphere_cluster')%}, cluster_name: "{{i.Node_name}}", transport_node_profile_name: "TranspNodeProfl-cluster-{{i.Node_name}}"{%elif i.Note_ip and i.Node_type == 'single_esxi_host'%}, node_ip: "{{i.Node_ip|ipaddr}}", {%endif%},  switch_type: {%if i.NVDS_type|lower == 'vds 7'%}'VDS'{%else%}'NVDS'{%endif%}, TZ: ['TZ_overlay','TZ_Vlan'], uplink_profile: "{{i.Uplink_profile}}",  static_ip_assign: "NSX_TEP_POOL"{%if i.NVDS_type|lower == 'vds 7'%}, uplinks: [{{uplnkvds(1)}}{{uplnkvds(2,',')}}{{uplnkvds(3,',')}}{{uplnkvds(4,',')}}{{uplnkvds(5,',')}}{{uplnkvds(6,',')}}{{uplnkvds(7,',')}}{{uplnkvds(8,',')}}]{%elif i.NVDS_type|lower == 'n-vds'%}, pnics: [{{uplnknvds(1)}}{{uplnknvds(2,',')}}{{uplnknvds(3,',')}}{{uplnknvds(4,',')}}{{uplnknvds(5,',')}}{{uplnknvds(6,',')}}{{uplnknvds(7,',')}}{{uplnknvds(8,',')}}] {%endif%}   }
+    - { vcenter: "vCenter_{{i.vcenter_ip}}"{%if i.Node_name and (i.Node_type|lower == 'vsphere_cluster')%}, cluster_name: "{{i.Node_name}}", transport_node_profile_name: "TranspNodeProfl-cluster-{{i.Node_name}}"{%elif i.Note_ip and i.Node_type == 'single_esxi_host'%}, node_ip: "{{i.Node_ip|ipaddr}}", {%endif%},  switch_type: {%if i.NVDS_type|lower == 'vds 7'%}'VDS'{%else%}'NVDS'{%endif%}, TZ: ['TZ_overlay','TZ_Vlan'], uplink_profile: "{{i.Uplink_profile}}",  static_ip_assign: "NSX_TEP_POOL"{% for k,v in i.items() if 'UPLINK' in k %}{%if i.NVDS_type|lower == 'vds 7' and 'Uplink ' in v %}, uplinks: [{%if not loop.last %}"{{K}}": "{{value}}",{%else%}"{{K}}": "{{value}}"{%endif%}]{%elif i.NVDS_type|lower == 'n-vds'  and 'vmnic' in v %}, pnics: [{%if not loop.last %}"{{K}}": "{{value}}",{%else%}"{{K}}": "{{value}}"{%endif%}] {%endif%}{% endfor %}   }
 {% endfor %}
 
 
