--- a/templates/02_vnetworking.j2
+++ b/templates/02_vnetworking.j2
@@ -1,25 +1,10 @@
-{# - name: Assert if dictionary
-    assert:
-      that: ( mydict is defined ) and ( mydict | type_debug == "dict" )
-
-  - name: Assert if list
-    assert:
-      that: ( mylist is defined ) and ( mylist | type_debug == "list" ) #}
-
-
 # {{ ansible_managed }}
 {% set vsegments = spreadsheet_vNetworking_segments %}
-{# {% macro uplnkvds(arg1,arg2='') %}
-{% for k,v in i.items() if "Uplink " in k %}{{arg2}} "i.UPLINK{{arg1}}"{%endfor%}
-{% endmacro           %}
-{% macro uplnknvds(arg1,arg2='') %}
-{% if "vmnic" in "i.UPLINK{{arg1}}" %}{{arg2}} "i.UPLINK{{arg1}}"{%endif%}
-{% endmacro           %} #}
 ---
 
 l2_segments:
 {% for i in vsegments if (i.Segment_name) and (i.Transport_zone) %}
-    - { segment_name: "{{i.Segment_name}}, tz: "{{i.Transport_zone}}"{%if i.Gateway%}, gw_name: "{{i.Gateway}}"{%endif%}{%if i.Subnet|ipaddr('address/prefix')%}, seg_subnet: "{{i.Subnet|ipaddr('address/prefix')}}"{%endif%}{%if i.Vlans and ',' in i.Vlans%}, seg_vlanids: "{{i.Vlans.split(",")}}"{%elif i.Vlans%}, seg_vlanids: "{{i.Vlans}}"{%endif%}{%if i.Named_teaming%}, named_teaming: "{{i.Named_teaming}}"{%endif%}   }
+    - { segment_name: "{{i.Segment_name}}, tz: "{{i.Transport_zone}}"{%if i.Gateway%}, gw_name: "{{i.Gateway}}"{%endif%}{%if i.Subnet|ipaddr('address/prefix')%}, seg_subnet: "{{i.Subnet|ipaddr('address/prefix')}}"{%endif%}{%if i.Named_teaming%}, named_teaming: "{{i.Named_teaming}}"{%endif%}   }
 {% endfor %}
 
 
