--- a/templates/02_vnetworking.j2
+++ b/templates/02_vnetworking.j2
@@ -1,5 +1,42 @@
 {% set vsegments = spreadsheet_vNetworking_segments %}
+{% set vgateways = spreadsheet_vNetworking_gateways %}
 l2_segments:
 {% for i in vsegments if (i.Segment_name) and (i.Transport_zone) %}
-    - { segment_name: "{{i.Segment_name}}", tz: "{{i.Transport_zone}}"{%if i.Gateway%}, gw_name: "{{i.Gateway}}"{%endif%}{%if i.Subnet|ipaddr('address/prefix')%}, seg_subnet: "{{i.Subnet|ipaddr('address/prefix')}}"{%endif%}{%if i.Vlans%}, seg_vlanids: "{{(i.Vlans|string).encode('ascii', 'ignore').split(",")}}"{%endif%}{%if i.Named_teaming%}, named_teaming: "{{i.Named_teaming}}"{%endif%}   }
+    - { segment_name: "{{i.Segment_name}}", tz: "{{i.Transport_zone}}"{%if i.Gateway%}, gw_name: "{{i.Gateway}}"{%endif%}"{%if i.Gateway_type%}, gw_type: "{{i.Gateway_type}}"{%endif%}{%if i.Subnet|ipaddr('address/prefix')%}, seg_subnet: ["{{i.Subnet|ipaddr('address/prefix')}}"]{%endif%}{%if i.Vlans%}, seg_vlanids: "{{(i.Vlans|string).encode('ascii', 'ignore').split(",")}}"{%endif%}{%if i.Named_teaming%}, named_teaming: "{{i.Named_teaming}}"{%endif%}   }
+{% endfor %}
+
+{% set temp_gws= [] %}
+gateways:
+{% for gw in vgateways if (gw.Gateway_type) and (gw.Gateway_name) and (gw.Hosting_Edge_cluster) and (gw.Gateway_name not in temp_gws) %}
+{{temp_gws.append(gw.Gateway_name)}}
+  - gateway_name: "{{gw.Gateway_name}}"
+    gateway_type: "{{gw.Gateway_type}}"
+    gw_edge_cluster: "{{gw.Hosting_Edge_cluster}}"
+    gw_ha_mode: "{{gw.HA_mode|default('ACTIVE_STANDBY')}}"
+    {%if gw.gateway_type == 'Tier-1 Gateway' and gw.Linked_Tier0_Gateway%}linked_t0: "{{gw.Linked_Tier0_Gateway}}"{%endif%}
+    {%if gw.gateway_type == 'Tier-1 Gateway' and gw.Tier1_LB_size%}t1_pool_allocation: "{{gw.Tier1_LB_size}}"{%endif%}
+    bgp_neighbors:
+    {% for i in vgateways if i.Gateway_name == gw.Gateway_name and i.External_interface_ip|ipaddr %}
+      - neighbor_address: "{{i.BGP_neighbor_ip}}"
+        remote_as_num: "{{ i.BGP_neighbor_AS }}"
+        bfd:
+          enabled: "{% if i.BGP_BFD|lower == 'yes'%}True{%else%}False{%endif%}"
+        state: present
+        source_addresses: ["{{i.External_interface_ip}}"]
+        password: "{{i.BGP_password|default(omit)}}"
+    {% endfor %}
+    interfaces:
+    {% for i in vgateways if i.Gateway_name == gw.Gateway_name and i.External_interface_in_edge and i.External_interface_ip|ipaddr %}
+      - id: "{{i.External_interface_name}}"
+        state: "present"
+        type: "EXTERNAL"
+        urpf_mode: "NONE"
+        edge_node_info:
+        edge_cluster_display_name: "{{ i.Hosting_Edge_cluster }}"
+        edge_node_display_name: "{{ i.External_interface_in_edge }}"
+        segment_display_name: "{{ i.Connected_to_segment }}"
+        subnets:
+          - ip_addresses: ["{{ i.External_interface_ip|ipaddr('address') }}"]
+            prefix_len: "{{ i.External_interface_ip|ipaddr('prefix') }}"
+    {% endfor %}
 {% endfor %}
