--- a/templates/02_vnetworking.j2
+++ b/templates/02_vnetworking.j2
@@ -2,7 +2,7 @@
 {% set vgateways = spreadsheet_vNetworking_gateways %}
 l2_segments:
 {% for i in vsegments if (i.Segment_name) and (i.Transport_zone) %}
-    - { segment_name: "{{i.Segment_name}}", tz: "{{i.Transport_zone}}"{%if i.Gateway%}, gw_name: "{{i.Gateway}}"{%endif%}{%if i.Gateway_type == 'Tier-1 Gateway'%}, gw_type: "Tier-1 Gateway"{%elif i.GW_type == 'Tier-0 Gateway'%}, gw_type: "Tier-0 Gateway"{%endif%}{%if i.Subnet_cidr|ipaddr('address/prefix')%}, seg_subnet: ["{{i.Subnet_cidr|ipaddr('address/prefix')}}"]{%endif%}{%if i.Vlans%}, seg_vlanids: "{{(i.Vlans|string).encode('ascii', 'ignore').split(",")}}"{%endif%}{%if i.Named_teaming%}, named_teaming: "{{i.Named_teaming}}"{%endif%}   }
+    - { segment_name: "{{i.Segment_name}}", tz: "{{i.Transport_zone}}"{%if i.Gateway%}, gw_name: "{{i.Gateway}}"{%endif%}{%if i.Gateway_type == 'Tier-1 Gateway'%}, gw_type: "Tier-1 Gateway"{%elif i.Gateway_type == 'Tier-0 Gateway'%}, gw_type: "Tier-0 Gateway"{%endif%}{%if i.Subnet_cidr|ipaddr('address/prefix')%}, seg_subnet: ["{{i.Subnet_cidr|ipaddr('address/prefix')}}"]{%endif%}{%if i.Vlans%}, seg_vlanids: "{{(i.Vlans|string).encode('ascii', 'ignore').split(",")}}"{%endif%}{%if i.Named_teaming%}, named_teaming: "{{i.Named_teaming}}"{%endif%}   }
 {% endfor %}
 
 {% set temp_gws= [] %}
@@ -13,8 +13,8 @@ gateways:
     gateway_type: "{{gw.Gateway_type}}"
     gw_edge_cluster: "{{gw.Hosting_Edge_cluster}}"
     gw_ha_mode: "{{gw.HA_mode|default('ACTIVE_STANDBY')}}"
-    {%if gw.Gateway_type == 'Tier-1 Gateway' and gw.Linked_Tier0_Gateway%}linked_t0: "{{gw.Linked_Tier0_Gateway}}"{%endif +%}
-    {%if gw.Gateway_type == 'Tier-1 Gateway' and gw.Tier1_LB_size%}t1_pool_allocation: "{{gw.Tier1_LB_size}}"{%endif +%}
+    {%if gw.Gateway_type == 'Tier-1 Gateway' and gw.Linked_Tier0_Gateway%}linked_t0: "{{gw.Linked_Tier0_Gateway}}"{%endif %}
+    {%if gw.Gateway_type == 'Tier-1 Gateway' and gw.Tier1_LB_size%}t1_pool_allocation: "{{gw.Tier1_LB_size}}"{%endif %}
     bgp_neighbors:
     {%- for i in vgateways if i.Gateway_name == gw.Gateway_name and i.External_interface_ip|ipaddr %}
       - neighbor_address: "{{i.BGP_neighbor_ip}}"
