--- a/templates/02_vnetworking.j2
+++ b/templates/02_vnetworking.j2
@@ -13,8 +13,12 @@ gateways:
     gateway_type: "{{gw.Gateway_type}}"
     gw_edge_cluster: "{{gw.Hosting_Edge_cluster}}"
     gw_ha_mode: "{{gw.HA_mode|default('ACTIVE_STANDBY')}}"
-    {%if gw.Gateway_type == 'Tier-1 Gateway' and gw.Linked_Tier0_Gateway%}linked_t0: "{{gw.Linked_Tier0_Gateway}}"{%endif %}
-    {%if gw.Gateway_type == 'Tier-1 Gateway' and gw.Tier1_LB_size%}t1_pool_allocation: "{{gw.Tier1_LB_size}}"{%endif %}
+    {%if gw.Gateway_type == 'Tier-1 Gateway' and gw.Linked_Tier0_Gateway%}
+    linked_t0: "{{gw.Linked_Tier0_Gateway}}"
+    {%endif %}
+    {%if gw.Gateway_type == 'Tier-1 Gateway' and gw.Tier1_LB_size%}
+    t1_pool_allocation: "{{gw.Tier1_LB_size}}"
+    {%endif %}
     bgp_neighbors:
     {%- for i in vgateways if i.Gateway_name == gw.Gateway_name and i.External_interface_ip|ipaddr %}
       - neighbor_address: "{{i.BGP_neighbor_ip}}"
