--- a/templates/02_vnetworking.j2
+++ b/templates/02_vnetworking.j2
@@ -2,7 +2,7 @@
 {% set vgateways = spreadsheet_vNetworking_gateways %}
 l2_segments:
 {% for i in vsegments if (i.Segment_name) and (i.Transport_zone) %}
-    - { segment_name: "{{i.Segment_name}}", tz: "{{i.Transport_zone}}"{%if i.Gateway%}, gw_name: "{{i.Gateway}}"{%endif%}{%if i.Gateway_type == 'Tier-1 Gateway'%}, gw_type: "Tier-1 Gateway"{%elif i.Gateway_type == 'Tier-0 Gateway'%}, gw_type: "Tier-0 Gateway"{%endif%}{%if i.Subnet_cidr|ipaddr('address/prefix')%}, seg_subnet: ["{{i.Subnet_cidr|ipaddr('address/prefix')}}"]{%endif%}{%if i.Vlans%}, seg_vlanids: "{{(i.Vlans|string).encode('ascii', 'ignore').split(",")}}"{%endif%}{%if i.Named_teaming%}, named_teaming: "{{i.Named_teaming}}"{%endif%}   }
+    - { segment_name: "{{i.Segment_name}}", tz: "{{i.Transport_zone}}"{%if i.Gateway%}, gw_name: "{{i.Gateway}}"{%endif%}{%if i.Gateway_type == 'Tier-1 Gateway'%}, gw_type: "Tier-1 Gateway"{%elif i.Gateway_type == 'Tier-0 Gateway'%}, gw_type: "Tier-0 Gateway"{%endif%}{%if i.Subnet_cidr|ipaddr('address/prefix')%}, seg_subnet: [gateway_address: "{{i.Subnet_cidr|ipaddr('address/prefix')}}"]{%endif%}{%if i.Vlans%}, seg_vlanids: "{{(i.Vlans|string).encode('ascii', 'ignore').split(",")}}"{%endif%}{%if i.Named_teaming%}, named_teaming: "{{i.Named_teaming}}"{%endif%}   }
 {% endfor %}
 
 {% set temp_gws= [] %}
