--- a/templates/03_vsec_grps.j2
+++ b/templates/03_vsec_grps.j2
@@ -59,4 +59,4 @@ security_groups:
 {% endif %}
 {% endfor%}  
 
-{# this must be refined with a way to resolve external ids (Vms, physical server and cloudvm instance) and also other criterias that depends on list as value (convert from text to list)}
+{# this must be refined with a way to resolve external ids (Vms, physical server and cloudvm instance) and also other criterias that depends on list as value (convert from text to list)#}
