--- a/templates/03_vsec_grps.j2
+++ b/templates/03_vsec_grps.j2
@@ -16,7 +16,7 @@ security_groups:
     expression:
 {% if g.member_type== 'static_ip_subnet'%}
       - resource_type: "IPAddressExpression"
-        ip_addresses: "{{g.value.split(',')}}"
+        ip_addresses: "{{(g.value|string).encode('ascii', 'ignore').split(',')}}"
 {% elif g.member_type== 'AD_group' %}
       - resource_type: "IdentityGroupExpression"
         identity_groups: ["{{g.value}}"]
@@ -59,7 +59,7 @@ security_groups:
         key: {%if i.member_type== 'dynamic_vm_name'%}"Name"{%elif i.member_type== 'dynamic_vm_os_name'%}"OSName"{%elif i.member_type== 'dynamic_vm_computer_name'%}"ComputerName"{%else%}"Tag"{%endif%}
 
         operator: {%if 'dynamic_vm' in i.member_type%}"{{i.dynamic_operator}}"{%else%}"EQUALS"{%endif%}
-        
+
         value: "{{i.value}}"
 {%        endif %}
 {%    endfor %}
